--- a/client/src/Components/UpdateTrek/UpdateTrek.scss
+++ b/client/src/Components/UpdateTrek/UpdateTrek.scss
@@ -96,3 +96,33 @@
         }
         
 }
+
+
+@media screen and (max-width: 640px){
+    .UpdateTrek {
+        width: 95%;
+        margin: auto;
+        border: 1px solid rgba(96, 84, 90,.2);
+        
+        &-label {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
+            margin-bottom: .5rem;
+        }
+
+        .UpdateTreklabel-text {
+            margin-bottom: .5rem;
+        }
+
+        &-button-container {
+            margin: 1rem;
+        }
+
+        &-input {
+            width: 100%;
+            margin-left: 0;
+        }
+    }
+}
